# MS-Foundry-Speedtest

./: .env.example  .gitignore  README.md  pyproject.toml
.github/agents/: declarative-agents-architect.agent.md  expert-cpp-software-engineer.agent.md  expert-nextjs-developer.agent.md  hf-skills.agent.md  karpathy-coder.agent.md  microsoft-agent-framework-python.agent.md  se-ux-ui-designer.agent.md
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/bishop/: charter.md  history.md
.squad/agents/burke/: charter.md  history.md
.squad/agents/hicks/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-13T10-00-00Z-gpt-chat-latest-benchmark.md
API/: completions_connection.py  responses_connection.py
docs/: architecture.mmd
foundry_speedtest/: __init__.py  __main__.py  adapters.py  benchmarks.py  cli.py  config.py  evaluation.py  metrics.py  reporter.py
tests/: probe_apim_gpt_chat_latest.py  test_evaluation.py  test_responses_api_gate.py
